--- a/dynamixel-workbench/dynamixel_workbench_controllers/CMakeLists.txt
+++ b/dynamixel-workbench/dynamixel_workbench_controllers/CMakeLists.txt
@@ -5,7 +5,8 @@ cmake_minimum_required(VERSION 3.0.2)
 project(dynamixel_workbench_controllers)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
-add_compile_options(-std=c++11)
+add_compile_options(-std=c++14)
+add_definitions(-DBOOST_BIND_GLOBAL_PLACEHOLDERS)
 
 ################################################################################
 # Find catkin packages and libraries for catkin and system dependencies
