--- a/pointcloud_test/package.xml
+++ b/pointcloud_test/package.xml
@@ -58,6 +58,8 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <build_depend>cv_bridge</build_depend>
+  <build_depend>image_transport</build_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
